[gd_scene load_steps=7 format=3]

[ext_resource type="PackedScene" path="res://scenes/Player.tscn" id="1_player"]
[ext_resource type="Script" path="res://scripts/GameController.gd" id="2_game"]
[ext_resource type="Script" path="res://scripts/EnemySpawner.gd" id="3_spawner"]
[ext_resource type="PackedScene" path="res://ui/HUD.tscn" id="4_hud"]
[ext_resource type="PackedScene" path="res://ui/SubstanceSelection.tscn" id="5_selection"]
[ext_resource type="Script" path="res://scripts/SubstanceManager.gd" id="6_substances"]

[node name="Game" type="Node2D"]
script = ExtResource("2_game")

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.08, 0.1, 0.12, 1)

[node name="Player" parent="." instance=ExtResource("1_player")]
position = Vector2(0, 0)

[node name="EnemySpawner" type="Node2D" parent="."]
script = ExtResource("3_spawner")

[node name="SubstanceManager" type="Node" parent="."]
script = ExtResource("6_substances")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" parent="CanvasLayer" instance=ExtResource("4_hud")]

[node name="SubstanceSelection" parent="CanvasLayer" instance=ExtResource("5_selection")]
